build/infra-aws-operator.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
  namespace: go
spec:
  defaultBackend:
    service:
      name: infra-aws-operator
      port:
        number: 8088

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: infra-aws-operator
  namespace: go
spec:
  rules:
    - host: go.xxx.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-aws-operator
                port:
                  number: 8088

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: infra-aws-operator
    app.kubernetes.io/instance: infra-aws-operator
  name: infra-aws-operator
  namespace: go
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 8088
      protocol: TCP
      targetPort: http
      appProtocol: http
  selector:
    app.kubernetes.io/name: infra-aws-operator
    app.kubernetes.io/instance: infra-aws-operator

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: infra-aws-operator
    app.kubernetes.io/instance: infra-aws-operator
  name: infra-aws-operator
  namespace: go
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: infra-aws-operator
      app.kubernetes.io/instance: infra-aws-operator
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: infra-aws-operator
        app.kubernetes.io/instance: infra-aws-operator
    spec:
      containers:
        - name: infra-aws-operator
          image: harbor.go.xxx.tech/devops/infra-aws-operator:v0.1
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /check
              port: 8088
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /check
              port: 8088
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: config-yaml
              mountPath: /opt/configs/config.yaml
              subPath: config.yaml
      imagePullSecrets:
        - name: gov2.0harbor
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: config-yaml
          configMap:
            name: infra-aws-operator-configmap
